@@ -1,3 +1,8 @@
+2004-05-4 Duncan Coutts <duncan@coutts.uklinux.net>
+
+	* configure.in, Makefile, mk/config.mk.in: allow libglade to be
+	built without the gnome modules.
+
 2004-05-2 Duncan Coutts <duncan@coutts.uklinux.net>
 
 	* gtk/treeList/TreeStore.chs: added method treeStoreClear
